--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
     </head>
     <body>
-        <div id="apimatic" data-theme="dark" data-apikey="cI8h335yT8bj0eeGb_L_MByK7wFoASYMAcnaCsml3EQjfb8Vnf-hLL-7qYnwgwmf">
+        <div id="apimatic" data-theme="light" data-apikey="cI8h335yT8bj0eeGb_L_MINXK5_nvUOVNkINCMGNDwBW54ZkRq4_CtE-GfS-chLc">
         </div>
         <script type="text/javascript" src="https://dxjs.apimatic.io/static/js/portal.v2.js">
         </script>
@@ -29,6 +29,7 @@
                 apiKey: apiKey,
                 baseTheme: theme,
                 loadAllDocsOnInit:false,
+                apiName:"BibcodeQuery",
                 allowedLanguages:[
                                     "objc_cocoa_touch_ios_lib",
                                     "angular_javascript_lib",
